--- a/assets/scss/partials/_site-footer.scss
+++ b/assets/scss/partials/_site-footer.scss
@@ -9,12 +9,6 @@
     bottom: 1em;
     right: 0px;
     font-family: $site-header-font-family;
-    @include MQ(L) {
-        position: fixed;
-        left: 2em;
-        bottom: 2em;
-        width:150px;
-    }
 }
 
 .kudos-block + .copyright {
