--- a/assets/scss/partials/_site-header.scss
+++ b/assets/scss/partials/_site-header.scss
@@ -17,6 +17,10 @@ header.site-header {
     border-left: 1px solid #f0f0f0;
     z-index: 3;
     overflow-y:scroll;
+    -ms-overflow-style:none;
+    &::-webkit-scrollbar {
+        display:none;
+    }
     @include transform(translateX(101%));
     a {
         color: #333333;
